fixed balance updating in right & left rotate. AVLTree, BSTree complete and working

--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ cmake-build-debug/
 
 # *.iml
 # modules.xml
-# .idea/misc.xml
+.idea/misc.xml
 # *.ipr
 
 # Sonarlint plugin
@@ -83,7 +83,7 @@ cmake-build-debug/
 # Byte-compiled / optimized / DLL files
 *.py[cod]
 *$py.class
-
+/.idea
 # C extensions
 *.so
 
